--- a/app/partials/views/modules/sprints.jade
+++ b/app/partials/views/modules/sprints.jade
@@ -12,7 +12,7 @@ section.sprints
                                       tg-check-permission="add_milestone")
                     span.text + New sprint
 
-    div.sprint.sprint-open(ng-repeat="sprint in openSprints track by sprint.id" tg-backlog-sprint="sprint")
+    div.sprint.sprint-open(ng-repeat="sprint in openSprints track by sprint.id", tg-backlog-sprint="sprint", tg-sprint-sortable)
         include sprint
 
     a.filter-closed-sprints(href="", ng-show="project.total_closed_milestones")
