--- a/app/index.jade
+++ b/app/index.jade
@@ -33,6 +33,8 @@ html(lang="en", ng-app="taiga")
             include partials/views/modules/lightbox-search
         div.lightbox.lightbox-feedback.lightbox-generic-form(tg-lb-feedback)
             include partials/views/modules/lightbox-feedback
+        div.lightbox.lightbox-import
+            include partials/views/modules/lightbox-import
 
         include partials/views/modules/loader
 
