--- a/app/styles/modules/home-projects-list.scss
+++ b/app/styles/modules/home-projects-list.scss
@@ -50,6 +50,7 @@
 
 .recent-projects {
     @include table-flex-child(8, 0, 0, 800px);
+    position: relative;
     ul {
         @include table-flex();
         margin: 0;
@@ -70,7 +71,6 @@
         height: 130px;
         margin-bottom: 1rem;
         margin-right: 1rem;
-        overflow: hidden;
         position: relative;
         transition: background-color .3s linear;
         &:hover {
@@ -90,6 +90,15 @@
     p {
         color: $grayer;
         transition: color .3s linear;
+    }
+    .import-badge {
+        background: rgba($gray-light, .8);
+        border-radius: 2px;
+        bottom: .3rem;
+        color: rgba($grayer, .8);
+        padding: .3rem .4rem;
+        position: absolute;
+        right: .3rem;
     }
 }
 
