Fix Spinner and new styles

--- a/app/styles/modules/common/history.scss
+++ b/app/styles/modules/common/history.scss
@@ -107,6 +107,12 @@
     .preview-icon {
         opacity: 0;
     }
+    .loading-spinner {
+        @extend %loading-spinner;
+        max-height: 1rem;
+        max-width: 1rem;
+    }
+
 }
 a.show-more-comments {
     @extend %small;
