--- a/app/styles/layout/us-detail.scss
+++ b/app/styles/layout/us-detail.scss
@@ -81,8 +81,7 @@
             width: 100%;
         }
         .icon-edit,
-        .icon-floppy,
-        .icon-spinner {
+        .icon-floppy {
             @extend %large;
             color: $gray-light;
             margin-left: .5rem;
@@ -119,6 +118,11 @@
             display: inline-block;
             margin-right: 5rem;
         }
+    }
+    .loading-spinner {
+        @extend %loading-spinner;
+        max-height: 1.5rem;
+        max-width: 1.5rem;
     }
 }
 
@@ -182,14 +186,14 @@
         position: absolute;
         right: 1rem;
         top: .2rem;
-        .save {
-            color: $blackish;
-            opacity: .6;
-            top: 0;
-        }
         &:hover {
             opacity: .3;
             transition: opacity .2s linear;
+        }
+        .loading-spinner {
+            @extend %loading-spinner;
+            max-height: 1.5rem;
+            max-width: 1.5rem;
         }
     }
     .edit {
@@ -337,9 +341,8 @@
     .level-name {
         color: darken($whitish, 20%);
         float: right;
-        &.loading span {
-            animation: loading .5s linear;
-            animation: spin 1s linear infinite;
+        .loading-spinner {
+            @extend %loading-spinner;
         }
     }
 }
@@ -405,6 +408,9 @@
                 background: $red;
             }
         }
+    }
+    .loading-spinner {
+        @extend %loading-spinner;
     }
 }
 
