--- a/app/partials/attachment/attachment-edit.jade
+++ b/app/partials/attachment/attachment-edit.jade
@@ -11,7 +11,7 @@
 
 .editable.editable-attachment-deprecated
     input(type="checkbox", name="is-deprecated",
-        id!="attach-<%- id %>-is-deprecated", <%- isDeprecated %>)
+        id!="attach-<%- id %>-is-deprecated")
     label(for!="attach-<%- id %>-is-deprecated") Deprecated?
 
 .attachment-settings
